# kronos-hub

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MERGE_ASSESSMENT.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml
ai-hedge-fund-main/: pyproject.toml
apps/: __init__.py
apps/api_gateway/: README.md  __init__.py  main.py
docs/: api.md  architecture.md  development.md  github-branding.md  index.html  styles.css
examples/: README.md
examples/requests/: aihf.backtest.openai.template.json  aihf.run.openai.template.json  aihf.run.style-china-baba.template.json  aihf.run.style-etf-qqq.template.json  aihf.run.style-growth-nvda.template.json  hybrid.demo.template.json  kronos.predict.template.json  tradingagents.research.openai.template.json
examples/scripts/: hub-common.ps1  invoke-aihf-backtest-sample.ps1  invoke-aihf-run-sample.ps1  invoke-aihf-style-backtests.ps1  invoke-aihf-style-compare.ps1  invoke-hybrid-demo.ps1  invoke-kronos-sample.ps1  invoke-tradingagents-sample.ps1
kronos_hub/: __init__.py  settings.py
kronos_hub/api/: __init__.py  app.py  dependencies.py  schemas.py
kronos_hub/engines/: __init__.py  base.py  registry.py
kronos_hub/services/: __init__.py  ai_hedge_fund.py  (+2 more)
scripts/: bootstrap_hub.ps1  generate_readme_demo_gif.py  run_api.ps1  smoke_check.py
tests/: __init__.py  test_hybrid.py  test_registry.py  test_services.py  test_tradingagents_forecast_context.py
(+42 files in other folders)
